# SimpleRenderEngineProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GameProgramming24/Exercise4/: README.md
GameProgramming24/Exercise4/Engine/: CMakeLists.txt
GameProgramming24/Exercise4/Engine/Engine/: GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
GameProgramming24/Exercise4/ExampleGame/: CMakeLists.txt  main.cpp
GameProgramming24/Exercise4/ExampleGame/Game/: AsteroidController.cpp  AsteroidController.h  ComponentController.cpp  ComponentController.h  ComponentRendererSprite.cpp  ComponentRendererSprite.h  LaserController.cpp  LaserController.h  PlayerController.cpp  PlayerController.h
GameProgramming24/Exercise4/ExampleGame/data/: spritesheet.json
cmake/: FindBox2D.cmake  FindLua.cmake  FindSDL2_mixer.cmake
project/: CMakeLists.txt  box2d-example.cpp  box2d-platform-example.cpp
project/3D_Scenegraph/: CMakeLists.txt
project/BussIK/: CMakeLists.txt
project/gui/: CMakeLists.txt  Hero.cpp  MainMenuComponent.cpp
project/particle_system/: CMakeLists.txt
project/platformer/: Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlatformerGame.cpp  PlatformerGame.hpp
